--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,14 +21,15 @@ body {
         margin-top: 40px;
         margin-bottom: 40px;
         font-weight: bold;
-        border: 1px solid black;
         padding: 10px;
+        box-shadow: 0px 0px 10px 6px,
     }
     main {
         margin-top: 50px;
         border: 3px solid goldenrod;
         margin-bottom: 100px;
     }
+    
     section {
         background: radial-gradient(rgb(226, 221, 221),rgba(148, 147, 147, 0.863));
         margin-bottom: 50px;
@@ -40,12 +41,16 @@ body {
                 color: whitesmoke;
                 }
     }
+    .newsletter {
+        margin-left:  20px;
+    }
     .redes {
         font-weight: bold;
     }
     footer {
         margin-top: 50px;
         font-weight: bold;
-        font-size: small;
+        font-size: 12px;
+        
     }
 }
