--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,8 @@
 body {
-    margin: 0;
+    /*CSS INDEX*/
+    margin: 35px;
     padding: 0;
-    background: rgb(247, 244, 244);
+    background: rgb(247, 244, 244); 
     a {
         text-decoration: none;
         color: black;
@@ -11,9 +12,7 @@ body {
     li {
         list-style: none;
     }
-    h1 {
-        
-        
+    h1 { 
         padding: 20px;
         font-size: 7rem;
     }
@@ -23,6 +22,7 @@ body {
         font-weight: bold;
         padding: 10px;
         box-shadow: 0px 0px 10px 6px,
+        
     }
     main {
         margin-top: 50px;
@@ -32,7 +32,7 @@ body {
     
     section {
         background: radial-gradient(rgb(226, 221, 221),rgba(148, 147, 147, 0.863));
-        margin-bottom: 50px;
+        margin-bottom: 50px;   
         border: 1px solid blanchedalmond;
             .leader {
             color: goldenrod;
@@ -53,4 +53,15 @@ body {
         font-size: 12px;
         
     }
+    /*CSS CAMISAS*/
+    .camisas-hombre {
+        font-size: 20px;
+        margin-top: 10px;
+        margin-bottom: 20px;
+    }
+
+    .image1 {
+        width: 350px;
+    }
+
 }
