--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,7 +3,9 @@ body {
   margin: 35px;
   padding: 0;
   background: #f7f4f4;
-  /*CSS CAMISAS*/ }
+  /*CSS CAMISAS*/
+  /*CSS REGISTRO*/
+  /*CSS AYUDA*/ }
   body a {
     text-decoration: none;
     color: black;
@@ -45,3 +47,9 @@ body {
     margin-bottom: 20px; }
   body .image1 {
     width: 350px; }
+  body .registro {
+    margin-top: 100px;
+    margin-bottom: 200px; }
+  body .ayuda {
+    margin-top: 100px;
+    margin-bottom: 200px; }
