--- a/scss/style.scss
+++ b/scss/style.scss
@@ -63,5 +63,16 @@ body {
     .image1 {
         width: 350px;
     }
+    /*CSS REGISTRO*/
+
+    .registro {
+        margin-top: 100px;
+        margin-bottom: 200px;
+    }
+    /*CSS AYUDA*/
+    .ayuda {
+        margin-top: 100px;
+        margin-bottom: 200px;
+    }
 
 }
