--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,14 +1,59 @@
+.li-hover {
+  transition-property: transform;
+  transition-duration: 1s; }
+
+.li-hover:hover {
+  transform: scale(1.2); }
+
+.image1 {
+  transition-property: transform;
+  transition-duration: 1s; }
+
+.image1:hover {
+  transform: scale(1.1); }
+
+.pages {
+  background: blanchedalmond;
+  color: black;
+  transition: background-color 1s; }
+
+.pages:hover {
+  background: whitesmoke;
+  color: #f5b209; }
+
+body {
+  background: #f7f4f4; }
+
+a {
+  color: black; }
+
+main {
+  border: 3px solid goldenrod; }
+
+section {
+  background: radial-gradient(#e2dddd, rgba(148, 147, 147, 0.863));
+  border: 1px solid blanchedalmond; }
+  section .leader {
+    color: goldenrod; }
+  section .leader2 {
+    color: whitesmoke; }
+
+.image1 {
+  width: 350px;
+  height: auto; }
+
+.camisas-hombre {
+  font-size: 20px; }
+
 body {
   /*CSS INDEX*/
   margin: 35px;
   padding: 0;
-  background: #f7f4f4;
   /*CSS CAMISAS*/
   /*CSS REGISTRO*/
   /*CSS AYUDA*/ }
   body a {
     text-decoration: none;
-    color: black;
     text-transform: uppercase; }
   body li {
     list-style: none; }
@@ -23,16 +68,9 @@ body {
     box-shadow: 0px 0px 10px 6px; }
   body main {
     margin-top: 50px;
-    border: 3px solid goldenrod;
     margin-bottom: 100px; }
   body section {
-    background: radial-gradient(#e2dddd, rgba(148, 147, 147, 0.863));
-    margin-bottom: 50px;
-    border: 1px solid blanchedalmond; }
-    body section .leader {
-      color: goldenrod; }
-    body section .leader2 {
-      color: whitesmoke; }
+    margin-bottom: 50px; }
   body .newsletter {
     margin-left: 20px; }
   body .redes {
@@ -42,11 +80,8 @@ body {
     font-weight: bold;
     font-size: 12px; }
   body .camisas-hombre {
-    font-size: 20px;
     margin-top: 10px;
     margin-bottom: 20px; }
-  body .image1 {
-    width: 350px; }
   body .registro {
     margin-top: 100px;
     margin-bottom: 200px; }
