--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,11 +1,14 @@
+@import "transiciones";
+@import "colores";
+@import "tamanios";
+
 body {
     /*CSS INDEX*/
     margin: 35px;
     padding: 0;
-    background: rgb(247, 244, 244); 
+    
     a {
         text-decoration: none;
-        color: black;
         text-transform: uppercase;
         
     }
@@ -21,25 +24,14 @@ body {
         margin-bottom: 40px;
         font-weight: bold;
         padding: 10px;
-        box-shadow: 0px 0px 10px 6px,
-        
+        box-shadow: 0px 0px 10px 6px,    
     }
     main {
         margin-top: 50px;
-        border: 3px solid goldenrod;
         margin-bottom: 100px;
     }
-    
     section {
-        background: radial-gradient(rgb(226, 221, 221),rgba(148, 147, 147, 0.863));
-        margin-bottom: 50px;   
-        border: 1px solid blanchedalmond;
-            .leader {
-            color: goldenrod;
-            }
-            .leader2 {
-                color: whitesmoke;
-                }
+        margin-bottom: 50px; 
     }
     .newsletter {
         margin-left:  20px;
@@ -55,14 +47,10 @@ body {
     }
     /*CSS CAMISAS*/
     .camisas-hombre {
-        font-size: 20px;
         margin-top: 10px;
         margin-bottom: 20px;
     }
-
-    .image1 {
-        width: 350px;
-    }
+    
     /*CSS REGISTRO*/
 
     .registro {
