--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -1,19 +1,26 @@
+$lista-colores: black goldenrod blanchedalmond, whitesmoke;
+$primario: nth($lista-colores, 1);
+$secundario: nth ($lista-colores, 2);
+$terciario: nth ($lista-colores, 3);
+$cuarto: nth ($lista-colores, 4);
+
+
 body {
     background: rgb(247, 244, 244); 
 }
 a {
-    color: black;
+    color: $primario;
 }
 main {
-    border: 3px solid goldenrod;
+    border: 3px solid $secundario;
 }
 section {
     background: radial-gradient(rgb(226, 221, 221),rgba(148, 147, 147, 0.863));  
-    border: 1px solid blanchedalmond;
+    border: 1px solid $terciario;
         .leader {
         color: goldenrod;
         }
         .leader2 {
-            color: whitesmoke;
+            color: $cuarto;
             }
 }
