instalamos AOS library

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -13,7 +13,7 @@
   transform: scale(1.1); }
 
 .pages {
-  background: blanchedalmond;
+  background: #e0d5c4;
   color: black;
   transition: background-color 1s; }
 
