--- a/scss/_transiciones.scss
+++ b/scss/_transiciones.scss
@@ -17,7 +17,7 @@
 }
 
 .pages {
-    background: blanchedalmond;
+    background: rgb(224, 213, 196);
     color: black;
     transition: background-color 1s;
 }
